下午总结 + 新计划

--- a/2022年5-6月计划.MD
+++ b/2022年5-6月计划.MD
@@ -1,9 +1,10 @@
 - [ ] 学习docker
-  - [ ] 基本命令
-    - [x] 镜像
-    - [x] 容器
-    - [x] 数据卷
+  - [x] 基本命令
+    - [x] 镜像 2022-04-22
+    - [x] 容器 2022-04-22
+    - [x] 数据卷 2022-04-22
   - [ ] 平时能用到的镜像
+  - [ ] 实战
 - [ ] 学习日语
   - [ ] 五十音
   - [ ] 每天10个单词
